# playground_discord_bot_rust

./: .env  Cargo.toml  yeet.gif:Zone.Identifier
src/: main.rs
