[package]
name = "rust-001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
dotenv = "0.15.0"
chrono = "0.4.19"
rand = "0.8.4"
serde_json = "1.0"
reqwest = { version= "0.11.9", features = ["blocking"] }
anyhow = "1.0.53"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
]
version = "0.10"